shop.demo-aks.org/ingress.yaml
kind: istio
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - shop.demo-aks.org
    port:
      name: https-443-shop.demo-aks.org
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cert-shop.demo-aks.org
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService
metadata:
  name: shop-vs
spec:
  hosts:
  - shop.demo-aks.org
  gateways:
  - shop-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "frontend-external.shop.svc.cluster.local"
        subset: v1-0-0
        port:
          number: 80
    timeout: 3s
    retries:
      attempts: 3
      perTryTimeout: 1s
      retryOn: gateway-error,connect-failure,refused-stream,5xx
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shop-dr
spec:
  host: "frontend-external.shop.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0-0
    labels:
      app: "release-name-frontend"
      version: "v1.0.0"
